--- a/style.css
+++ b/style.css
@@ -11,10 +11,27 @@ body {
 }
 
 .card {
-    padding: 10px;
-    margin: 10px;
+    padding: 0.625rem;
+    margin: 0.625rem;
 }
 
 img {
-    width: 250px;
+    width: 7.5rem;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+}
+
+h1 {
+    font-size: 2.25rem;
+}
+h2{
+    font-size: 1.50rem ;
+}
+
+p{
+   font-size: 1.00rem;
 }
