--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --dark: #272932;
     --camel: #D8A47F;
 }
-
+ 
 body {
     background-color: var(--light);
 }
@@ -35,3 +35,29 @@ h2{
 p{
    font-size: 1.00rem;
 }
+
+@media screen and (min-width: 700px) {
+    
+body{background-color:lightblue;}
+h1{font-size: 2.30rem;}
+p{font-size: 1.20rem;}
+.cat-ipsum {
+    display: none;
+}
+}
+
+@media screen and (min-width: 1000px) {
+    
+    body{background-color:lightgreen;}
+    h1{font-size: 2.50rem;}
+    p{font-size: 1.45rem;}
+    }
+
+
+    @media (prefers-color-scheme: dark) {
+        body{background-color: black;
+            color: var(--light);
+        };
+
+    
+    }
